--- a/app/layout/nav_menu.phtml
+++ b/app/layout/nav_menu.phtml
@@ -33,20 +33,30 @@
 			<ul class="dropdown-menu">
 				<li class="item">
 					<span>
-						<form action="<?= _url('index', 'index') ?>" method="get">
-							<?php if (in_array(Minz_Request::actionName(), ['normal', 'global', 'reader'], true)) { ?>
-							<input type="hidden" name="a" value="<?= Minz_Request::actionName() ?>" />
-							<?php } if (Minz_Request::paramString('get') !== '') { ?>
-							<input type="hidden" name="get" value="<?= FreshRSS_Context::currentGet() ?>" />
+						<form action="<?= $this->html_url ?>" method="get">
+							<?php if (Minz_Request::controllerName() === 'index'): ?>
+								<?php if (in_array(Minz_Request::actionName(), ['normal', 'global', 'reader'], true)) { ?>
+								<input type="hidden" name="a" value="<?= Minz_Request::actionName() ?>" />
+								<?php } if (Minz_Request::paramString('get') !== '') { ?>
+								<input type="hidden" name="get" value="<?= FreshRSS_Context::currentGet() ?>" />
+								<?php } if (Minz_Request::paramInt('state') !== 0) { ?>
+								<input type="hidden" name="state" value="<?= Minz_Request::paramInt('state') ?>" />
+								<?php } ?>
+							<?php endif; ?>
+							<?php if (Minz_Request::paramString('user') !== '') { ?>
+							<input type="hidden" name="user" value="<?= Minz_User::name() ?>" />
+							<?php } if (ctype_alnum(Minz_Request::paramString('t'))) { ?>
+							<input type="hidden" name="t" value="<?= Minz_Request::paramString('t') ?>" />
 							<?php } if (ctype_upper(Minz_Request::paramString('order'))) { ?>
 							<input type="hidden" name="order" value="<?= FreshRSS_Context::$order ?>" />
-							<?php } if (Minz_Request::paramInt('state') !== 0) { ?>
-							<input type="hidden" name="state" value="<?= FreshRSS_Context::$state ?>" />
+							<?php } if (ctype_lower(Minz_Request::paramString('f'))) { ?>
+							<input type="hidden" name="f" value="<?= Minz_Request::paramString('f') ?>" />
 							<?php } ?>
 							<div class="stick search">
 								<input type="search" name="search"
-									value="<?= htmlspecialchars(htmlspecialchars_decode(FreshRSS_Context::$search->getRawInput(), ENT_QUOTES), ENT_COMPAT, 'UTF-8'); ?>"
-									placeholder="<?= _t('gen.menu.search') ?>" title="<?= _t('gen.menu.search') ?>" /><button class="btn" type="submit" title="<?= _t('index.menu.search_short') ?>"><?= _i('search') ?></button>
+									value="<?= htmlspecialchars(htmlspecialchars_decode(Minz_Request::paramString('search'), ENT_QUOTES), ENT_COMPAT, 'UTF-8') ?>"
+									placeholder="<?= _t('index.menu.search_short') ?>" title="<?= _t('gen.menu.search') ?>" />
+								<button class="btn" type="submit" title="<?= _t('index.menu.search_short') ?>"><?= _i('search') ?></button>
 							</div>
 							<p class="help"><?= _i('help') ?> <?= _t('gen.menu.search_help') ?></a></p>
 						</form>
@@ -93,31 +103,30 @@
 	</div>
 
 	<div class="group stick search">
-		<form action="<?= _url('index', 'index') ?>" method="get">
+		<form action="<?= $this->html_url ?>" method="get">
 			<input type="search" name="search" id="search"
-				value="<?= htmlspecialchars(htmlspecialchars_decode(FreshRSS_Context::$search->getRawInput(), ENT_QUOTES), ENT_COMPAT, 'UTF-8') ?>"
+				value="<?= htmlspecialchars(htmlspecialchars_decode(Minz_Request::paramString('search'), ENT_QUOTES), ENT_COMPAT, 'UTF-8') ?>"
 				placeholder="<?= _t('index.menu.search_short') ?>" title="<?= _t('gen.menu.search') ?>" />
 
-			<?php $param_a = Minz_Request::actionName(); ?>
-			<?php if (in_array($param_a, ['normal', 'global', 'reader'], true)) { ?>
-			<input type="hidden" name="a" value="<?= $param_a ?>" />
+			<?php if (Minz_Request::controllerName() === 'index'): ?>
+				<?php if (in_array(Minz_Request::actionName(), ['normal', 'global', 'reader'], true)) { ?>
+				<input type="hidden" name="a" value="<?= Minz_Request::actionName() ?>" />
+				<?php } if (Minz_Request::paramString('get') !== '') { ?>
+				<input type="hidden" name="get" value="<?= FreshRSS_Context::currentGet() ?>" />
+				<?php } if (Minz_Request::paramInt('state') !== 0) { ?>
+				<input type="hidden" name="state" value="<?= Minz_Request::paramInt('state') ?>" />
+				<?php } ?>
+			<?php endif; ?>
+			<?php if (Minz_Request::paramString('user') !== '') { ?>
+			<input type="hidden" name="user" value="<?= Minz_User::name() ?>" />
+			<?php } if (ctype_alnum(Minz_Request::paramString('t'))) { ?>
+			<input type="hidden" name="t" value="<?= Minz_Request::paramString('t') ?>" />
+			<?php } if (ctype_upper(Minz_Request::paramString('order'))) { ?>
+			<input type="hidden" name="order" value="<?= FreshRSS_Context::$order ?>" />
+			<?php } if (ctype_lower(Minz_Request::paramString('f'))) { ?>
+			<input type="hidden" name="f" value="<?= Minz_Request::paramString('f') ?>" />
 			<?php } ?>
-
-			<?php $get = Minz_Request::paramString('get'); ?>
-			<?php if ($get !== '') { ?>
-			<input type="hidden" name="get" value="<?= $get ?>" />
-			<?php } ?>
-
-			<?php $order = Minz_Request::paramString('order'); ?>
-			<?php if ($order !== '') { ?>
-			<input type="hidden" name="order" value="<?= $order ?>" />
-			<?php } ?>
-
-			<?php $state = Minz_Request::paramString('state'); ?>
-			<?php if ($state !== '') { ?>
-			<input type="hidden" name="state" value="<?= $state ?>" />
-			<?php } ?>
-
+			
 			<button class="btn" type="submit" title="<?= _t('index.menu.search_short') ?>"><?= _i('search') ?></button>
 		</form>
 	</div>
