--- a/app/views/configure/reading.phtml
+++ b/app/views/configure/reading.phtml
@@ -140,7 +140,7 @@
 				<label class="group-name" for="show_article_icons"><?= _t('conf.reading.article.icons') ?></label>
 				<div class="group-controls">
 					<select name="show_article_icons" id="show_article_icons" data-leave-validation="<?= FreshRSS_Context::userConf()->show_article_icons ?>">
-						<option value="t" <?= FreshRSS_Context::userConf()->show_article_icons === 't' ? ' selected="selected"' : '' ?> data-input-visible="true"><?= _t('conf.reading.article.icons.above_title') ?></option>	
+						<option value="t" <?= FreshRSS_Context::userConf()->show_article_icons === 't' ? ' selected="selected"' : '' ?> data-input-visible="true"><?= _t('conf.reading.article.icons.above_title') ?></option>
 						<option value="a" <?= FreshRSS_Context::userConf()->show_article_icons === 'a' ? ' selected="selected"' : '' ?> data-input-visible="true"><?= _t('conf.reading.article.icons.with_authors') ?></option>
 					</select>
 				</div>
@@ -363,6 +363,18 @@
 					<textarea name="filteractions_read" id="filteractions_read" class="w100"><?php
 						foreach (FreshRSS_Context::userConf()->filtersAction('read') as $filterRead) {
 							echo $filterRead->getRawInput(), PHP_EOL;
+						}
+					?></textarea>
+					<p class="help"><?= _i('help') ?> <?= _t('sub.feed.filteractions.help') ?></p>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label class="group-name" for="filteractions_star"><?= _t('conf.reading.star.when') ?></label>
+				<div class="group-controls">
+					<textarea name="filteractions_star" id="filteractions_star" class="w100"><?php
+						foreach (FreshRSS_Context::userConf()->filtersAction('star') as $filterStar) {
+							echo $filterStar->getRawInput(), PHP_EOL;
 						}
 					?></textarea>
 					<p class="help"><?= _i('help') ?> <?= _t('sub.feed.filteractions.help') ?></p>
