--- a/p/themes/Origine/origine.css
+++ b/p/themes/Origine/origine.css
@@ -603,6 +603,12 @@ a:hover .icon {
 	font-size: 1rem;
 }
 
+.aside_feed .tree-folder.all .tree-folder-title .title,
+.aside_feed .tree-folder.important .tree-folder-title .title,
+.aside_feed .tree-folder.favorites .tree-folder-title .title {
+	margin-left: 0.25rem;
+}
+
 .aside_feed .tree-folder-title button.dropdown-toggle {
 	margin: -0.75rem 0.25rem -0.75rem -0.75rem;
 	padding: 0.75rem 0 0.75rem 0.75rem;
