--- a/app/views/subscription/add.phtml
+++ b/app/views/subscription/add.phtml
@@ -73,7 +73,7 @@
 						<option value="<?= FreshRSS_Feed::KIND_XML_XPATH ?>" data-show="html_xpath"><?= _t('sub.feed.kind.xml_xpath') ?></option>
 						<option value="<?= FreshRSS_Feed::KIND_JSONFEED ?>"><?= _t('sub.feed.kind.jsonfeed') ?></option>
 						<option value="<?= FreshRSS_Feed::KIND_JSON_DOTNOTATION ?>" data-show="json_dotnotation"><?= _t('sub.feed.kind.json_dotnotation') ?></option>
-						<option value="<?= FreshRSS_Feed::KIND_HTML_JSON_DOTNOTATION ?>" data-show="json_dotnotation"><?= _t('sub.feed.kind.html_json') ?></option>
+						<option value="<?= FreshRSS_Feed::KIND_HTML_JSON_DOTNOTATION ?>" data-show="json_dotnotation xpathToJsonGroup"><?= _t('sub.feed.kind.html_json') ?></option>
 					</select>
 				</div>
 			</div>
