--- a/app/views/subscription/add.phtml
+++ b/app/views/subscription/add.phtml
@@ -73,7 +73,7 @@
 						<option value="<?= FreshRSS_Feed::KIND_XML_XPATH ?>" data-show="html_xpath"><?= _t('sub.feed.kind.xml_xpath') ?></option>
 						<option value="<?= FreshRSS_Feed::KIND_JSONFEED ?>"><?= _t('sub.feed.kind.jsonfeed') ?></option>
 						<option value="<?= FreshRSS_Feed::KIND_JSON_DOTNOTATION ?>" data-show="json_dotnotation"><?= _t('sub.feed.kind.json_dotnotation') ?></option>
-						<option value="<?= FreshRSS_Feed::KIND_HTML_JSON_DOTNOTATION ?>" data-show="json_dotnotation xpathToJsonGroup"><?= _t('sub.feed.kind.html_json') ?></option>
+						<option value="<?= FreshRSS_Feed::KIND_HTML_JSON_DOTNOTATION ?>" data-show="json_dotnotation xPathToJsonGroup"><?= _t('sub.feed.kind.html_json') ?></option>
 					</select>
 				</div>
 			</div>
@@ -168,10 +168,10 @@
 				</div>
 			</fieldset>
 			<fieldset id="json_dotnotation">
-				<div class="form-group" id="xpathToJsonGroup">
-					<label class="group-name" for="xpathToJson"><?= _t('sub.feed.kind.html_json.xpath') ?></label>
+				<div class="form-group" id="xPathToJsonGroup">
+					<label class="group-name" for="xPathToJson"><?= _t('sub.feed.kind.html_json.xpath') ?></label>
 					<div class="group-controls">
-						<textarea class="valid-xpath" name="xpathToJson" id="xpathToJson" rows="2" cols="64" spellcheck="false"></textarea>
+						<textarea class="valid-xpath" name="xPathToJson" id="xPathToJson" rows="2" cols="64" spellcheck="false"></textarea>
 						<p class="help"><?= _i('help') ?> <?= _t('sub.feed.kind.html_json.xpath.help') ?></p>
 					</div>
 				</div>
