--- a/app/views/index/normal.phtml
+++ b/app/views/index/normal.phtml
@@ -38,7 +38,7 @@ $today = @strtotime('today');
 
 <main id="stream" class="normal<?= FreshRSS_Context::userConf()->display_posts ? '' : ' hide_posts' ?>">
 	<h1 class="title_hidden"><?= _t('conf.reading.view.normal') ?></h1>
-	<div id="new-article">
+	<div id="new-article" hidden="hidden">
 		<a href="<?= Minz_Url::display(Minz_Request::currentRequest()) ?>"><?= _t('gen.js.new_article'); /* TODO: move string in JS*/ ?></a>
 	</div><?php
 	$lastEntry = null;
@@ -198,7 +198,7 @@ $today = @strtotime('today');
 		ob_end_clean();	//Discard the articles headers, as we have no articles
 ?>
 <main id="stream" class="normal">
-	<div id="new-article">
+	<div id="new-article" hidden="hidden">
 		<a href="<?= Minz_Url::display(Minz_Request::currentRequest()) ?>"><?= _t('gen.js.new_article'); /* TODO: move string in JS*/ ?></a>
 	</div>
 	<div class="prompt alert alert-warn">
