--- a/app/views/configure/privacy.phtml
+++ b/app/views/configure/privacy.phtml
@@ -12,13 +12,13 @@
 
 	<form method="post" action="<?= _url('configure', 'privacy') ?>">
 		<input type="hidden" name="_csrf" value="<?= FreshRSS_Auth::csrfToken() ?>" />
-	
+
 		<div class="form-group">
 			<label class="group-name" for="retrieve_extension_list"><?= _t('conf.privacy.retrieve_extension_list') ?></label>
 			<div class="group-controls">
 				<input type="checkbox" id="retrieve_extension_list" name="retrieve_extension_list" value="1"<?=
-					FreshRSS_Context::$user_conf->retrieve_extension_list !== false ? ' checked="checked"' : '' ?>
-					data-leave-validation="<?= FreshRSS_Context::$user_conf->retrieve_extension_list !== false ? 1 : 0 ?>"/>
+					FreshRSS_Context::userConf()->retrieve_extension_list !== false ? ' checked="checked"' : '' ?>
+					data-leave-validation="<?= FreshRSS_Context::userConf()->retrieve_extension_list !== false ? 1 : 0 ?>"/>
 			</div>
 		</div>
 
